--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,7 +6,8 @@
     xmlns:material="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF">
+    android:background="#FFFFFF"
+    >
 
     <!-- Logo -->
     <ImageView
@@ -24,12 +20,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <!-- Sign Up Title -->
+    <!-- Sign In Title -->
     <TextView
-        android:id="@+id/SignUpTV"
+        android:id="@+id/SignInTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up"
+        android:text="Login"
         android:textStyle="bold"
         android:textSize="40sp"
         android:layout_marginTop="5dp"
@@ -38,18 +34,18 @@
         app:layout_constraintLeft_toLeftOf="@+id/logo"
         android:layout_marginLeft="20dp"/>
 
-    <!-- Sign Up Description -->
+    <!-- Sign In Description -->
     <TextView
-        android:id="@+id/SignUpDescTV"
+        android:id="@+id/SignInDescTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Register with your email address."
+        android:text="Sign in to your registered account."
         android:textStyle="bold"
         android:textSize="12sp"
         android:textColor="@color/black"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/SignUpTV"
-        app:layout_constraintLeft_toLeftOf="@+id/SignUpTV"
+        app:layout_constraintTop_toBottomOf="@id/SignInTV"
+        app:layout_constraintLeft_toLeftOf="@+id/SignInTV"
         android:layout_marginBottom="15dp"
         />
 
@@ -62,7 +58,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignUpDescTV"
+        app:layout_constraintTop_toBottomOf="@+id/SignInDescTV"
         app:layout_constraintVertical_bias="0.114">
 
         <TextView
@@ -91,15 +87,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            android:text="Username"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -107,15 +94,7 @@
             android:layout_marginLeft="15dp"
             android:layout_marginBottom="15dp"
             app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/black">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ETUsername"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            app:boxStrokeColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -140,44 +119,38 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
-
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="18dp"
-            android:text="Confirm Password"
-            android:textColor="@color/black"
-            android:textSize="15sp"
-            android:textStyle="bold" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginBottom="15dp"
-            app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/black">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ETConfirmPassword"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/tvForgotPassword"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:layout_marginLeft="7dp"
+                android:clickable="true"
+                android:text="Forgot Password?"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                android:layout_marginTop="7dp"
+                android:textStyle="bold"
+
+
+                />
 
         </com.google.android.material.textfield.TextInputLayout>
+
+
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/SignUpBTN"
+            android:id="@+id/SignInBTN"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_margin="15dp"
-            android:text="CREATE ACCOUNT"
+            android:text="LOG IN"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:cornerRadius="10dp"
-            app:backgroundTint="@color/black" />
+            app:backgroundTint="@color/black"
+
+            />
+
 
     </LinearLayout>
 
@@ -219,16 +192,22 @@
             app:cornerRadius="10dp" />
 
 
-        <TextView
-            android:id="@+id/tvLogIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Already have an account? Log In"
-            android:textColor="#808080"
-            android:textSize="16sp"
-            android:padding="16dp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tvSignUp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="16dp"
+        android:text="Don't have an account? Sign Up"
+        android:textColor="#808080"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myLinearLayout2"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
