--- a/app/src/main/res/layout/activity_startup_page.xml
+++ b/app/src/main/res/layout/activity_startup_page.xml
@@ -10,7 +10,7 @@
     >
 
     <ImageView
-        android:id="@+id/imageView6"
+        android:id="@+id/urban_man"
         android:layout_width="593dp"
         android:layout_height="1010dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -23,7 +23,7 @@
         app:srcCompat="@drawable/urban_pedestrian" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tvDescription"
         android:layout_width="180dp"
         android:layout_height="246dp"
         android:layout_marginTop="24dp"
@@ -77,7 +77,7 @@
         app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnGetStarted"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Get Started"
@@ -86,10 +86,10 @@
         app:backgroundTint="@color/black"
         app:cornerRadius="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintEnd_toEndOf="@+id/tvDescription"
         app:layout_constraintHorizontal_bias="0.551"
-        app:layout_constraintStart_toStartOf="@+id/textView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintStart_toStartOf="@+id/tvDescription"
+        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
         app:layout_constraintVertical_bias="0.0" />
 
 
