--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:material="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
+    android:background="#FFFFFF">
+
+<androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,42 +17,42 @@
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="303dp"
-        android:layout_height="216dp"
-        android:layout_marginTop="40dp"
+        android:layout_width="290dp"
+        android:layout_height="190dp"
+        android:layout_marginTop="10dp"
         android:src="@drawable/unlock"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        material:layout_constraintEnd_toEndOf="parent"
+        material:layout_constraintStart_toStartOf="parent"
+        material:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tvIntro"
-        android:layout_width="315dp"
-        android:layout_height="79dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="313dp"
+        android:layout_height="57dp"
+        android:layout_marginTop="10dp"
         android:fontFamily="@font/inter_tight_semibold"
         android:text="Do you need help logging into your account?"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="22dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="@+id/logo"
-        app:layout_constraintStart_toStartOf="@+id/logo"
-        app:layout_constraintTop_toBottomOf="@+id/logo" />
+        material:layout_constraintEnd_toEndOf="@+id/logo"
+        material:layout_constraintStart_toStartOf="@+id/logo"
+        material:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <TextView
         android:id="@+id/tvDescription"
         android:layout_width="315dp"
         android:layout_height="79dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:fontFamily="@font/oswald_light"
         android:text="Enter your username or email and we’ll send you an OTP code to get back into your account."
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="19dp"
-        app:layout_constraintEnd_toEndOf="@+id/tvIntro"
-        app:layout_constraintStart_toStartOf="@+id/tvIntro"
-        app:layout_constraintTop_toBottomOf="@+id/tvIntro" />
+        material:layout_constraintEnd_toEndOf="@+id/tvIntro"
+        material:layout_constraintStart_toStartOf="@+id/tvIntro"
+        material:layout_constraintTop_toBottomOf="@+id/tvIntro" />
 
     <TextView
         android:id="@+id/tvGetCodeUsername"
@@ -56,20 +64,20 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textAlignment="center"
-        app:layout_constraintStart_toStartOf="@+id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+        material:layout_constraintStart_toStartOf="@+id/tvDescription"
+        material:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
     <View
         android:id="@+id/lineUsername"
         android:layout_width="117dp"
         android:layout_height="2dp"
         android:background="@drawable/selector_line"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tvGetCodeUsername"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvGetCodeUsername"
-        app:layout_constraintTop_toBottomOf="@+id/tvGetCodeUsername"
-        app:layout_constraintVertical_bias="0.011" />
+        material:layout_constraintBottom_toBottomOf="parent"
+        material:layout_constraintEnd_toEndOf="@+id/tvGetCodeUsername"
+        material:layout_constraintHorizontal_bias="0.0"
+        material:layout_constraintStart_toStartOf="@+id/tvGetCodeUsername"
+        material:layout_constraintTop_toBottomOf="@+id/tvGetCodeUsername"
+        material:layout_constraintVertical_bias="0.011" />
 
     <TextView
         android:id="@+id/tvGetCodeEmail"
@@ -81,8 +89,8 @@
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textAlignment="center"
-        app:layout_constraintEnd_toEndOf="@+id/tvDescription"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription" />
+        material:layout_constraintEnd_toEndOf="@+id/tvDescription"
+        material:layout_constraintTop_toBottomOf="@+id/tvDescription" />
 
 
     <View
@@ -90,12 +98,12 @@
         android:layout_width="117dp"
         android:layout_height="2dp"
         android:background="@drawable/selector_line"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/tvGetCodeEmail"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/tvGetCodeEmail"
-        app:layout_constraintTop_toBottomOf="@+id/tvGetCodeEmail"
-        app:layout_constraintVertical_bias="0.011" />
+        material:layout_constraintBottom_toBottomOf="parent"
+        material:layout_constraintEnd_toEndOf="@+id/tvGetCodeEmail"
+        material:layout_constraintHorizontal_bias="0.0"
+        material:layout_constraintStart_toStartOf="@+id/tvGetCodeEmail"
+        material:layout_constraintTop_toBottomOf="@+id/tvGetCodeEmail"
+        material:layout_constraintVertical_bias="0.011" />
 
     <LinearLayout
         android:id="@+id/myLinearLayout"
@@ -104,12 +112,12 @@
         android:layout_marginTop="24dp"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
-        app:layout_constraintVertical_bias="0.386">
+        material:layout_constraintBottom_toBottomOf="parent"
+        material:layout_constraintEnd_toEndOf="parent"
+        material:layout_constraintHorizontal_bias="0.0"
+        material:layout_constraintStart_toStartOf="parent"
+        material:layout_constraintTop_toBottomOf="@+id/tvGetCodeUsername"
+        material:layout_constraintVertical_bias="0.386">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
@@ -118,8 +126,8 @@
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="10dp"
-            app:boxBackgroundMode="outline"
-            app:boxStrokeColor="@color/black">
+            material:boxBackgroundMode="outline"
+            material:boxStrokeColor="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etUsername"
@@ -137,9 +145,8 @@
             android:text="Next"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
-            app:backgroundTint="@color/black"
-            app:cornerRadius="10dp"
-
+            material:backgroundTint="@color/black"
+            material:cornerRadius="10dp"
             />
 
         <TextView
@@ -158,15 +165,26 @@
             android:text="Continue with Google"
             android:textColor="@color/black"
             android:textSize="20sp"
-            app:backgroundTint="@color/white"
-            app:cornerRadius="10dp"
-            app:icon="@drawable/google_logo"
-            app:iconPadding="-30dp"
-            app:iconSize="70dp"
-            app:iconTint="@null"
-            app:strokeColor="@color/black"
-            app:strokeWidth="1dp" />
+            material:backgroundTint="@color/white"
+            material:cornerRadius="10dp"
+            material:icon="@drawable/google_logo"
+            material:iconPadding="-30dp"
+            material:iconSize="70dp"
+            material:iconTint="@null"
+            material:strokeColor="@color/black"
+            material:strokeWidth="1dp" />
 
+        <TextView
+            android:id="@+id/backToLogIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/inter_bold"
+            android:padding="5dp"
+            android:text="Back to Log In"
+            android:textColor="#313131"
+            android:textSize="16sp"
+            android:layout_marginTop="10dp"/>
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
