--- a/app/src/main/res/layout/activity_strong_password_creation.xml
+++ b/app/src/main/res/layout/activity_strong_password_creation.xml
@@ -15,7 +15,7 @@
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:src="@drawable/logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,10 +23,10 @@
 
     <!-- Sign In Title -->
     <TextView
-        android:id="@+id/SignInTV"
+        android:id="@+id/TVStrongPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="Create a Strong \n Password"
         android:textStyle="bold"
         android:fontFamily="@font/inter_tight_semibold"
         android:textSize="40sp"
@@ -36,21 +36,6 @@
         app:layout_constraintLeft_toLeftOf="@+id/logo"
         android:layout_marginLeft="20dp"/>
 
-    <!-- Sign In Description -->
-    <TextView
-        android:id="@+id/SignInDescTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Sign in to your registered account."
-        android:textStyle="bold"
-        android:textSize="12sp"
-        android:fontFamily="@font/inter_tight_semibold"
-        android:textColor="@color/black"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/SignInTV"
-        app:layout_constraintLeft_toLeftOf="@+id/SignInTV"
-        android:layout_marginBottom="15dp"
-        />
 
     <LinearLayout
         android:id="@+id/myLinearLayout"
@@ -61,14 +46,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/SignInDescTV"
+        app:layout_constraintTop_toBottomOf="@+id/TVStrongPassword"
         app:layout_constraintVertical_bias="0.114">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
-            android:text="Email Address"
+            android:text="New Password"
             android:fontFamily="@font/inter_tight_semibold"
             android:textColor="@color/black"
             android:textSize="15sp"
@@ -79,12 +64,13 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:layout_marginLeft="15dp"
+            app:passwordToggleEnabled="true"
             android:layout_marginBottom="15dp"
             app:boxBackgroundMode="outline"
             app:boxStrokeColor="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ETEmailAddress"
+                android:id="@+id/ETNewPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress" />
@@ -104,7 +90,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
-            android:text="Password"
+            android:text="Confirm New Password"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:fontFamily="@font/inter_tight_semibold"
@@ -121,24 +107,10 @@
             app:boxStrokeColor="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/ETPassword"
+                android:id="@+id/ETConfirmNewPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword" />
-            <TextView
-                android:id="@+id/tvForgotPassword"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="7dp"
-                android:clickable="true"
-                android:text="Forgot Password?"
-                android:fontFamily="@font/inter_tight_semibold"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                android:layout_marginTop="7dp"
-                android:textStyle="bold"
-                android:focusable="false"
-                android:focusableInTouchMode="false" />
 
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -146,12 +118,12 @@
 
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/LogInBTN"
+            android:id="@+id/ResetPasswordBTN"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_margin="15dp"
             android:fontFamily="@font/inter_tight_semibold"
-            android:text="LOG IN"
+            android:text="RESET PASSWORD"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             app:cornerRadius="10dp"
@@ -159,67 +131,20 @@
 
             />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/myLinearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myLinearLayout"
-        app:layout_constraintVertical_bias="0.0">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="OR"
-            android:textColor="#979797"
-            android:textStyle="bold" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/continueGoogleBtn"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_weight="1"
-            android:layout_margin="15dp"
-            android:text="Continue with Google"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:fontFamily="@font/inter_tight_semibold"
-            app:icon="@drawable/google_logo"
-            app:iconSize="70dp"
-            app:iconTint="@null"
-            app:iconPadding="-30dp"
-            app:backgroundTint="@color/white"
-            app:strokeColor="@color/black"
-            app:strokeWidth="1dp"
-            app:cornerRadius="10dp" />
-
-
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvSignUp"
+        android:id="@+id/backToLogIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        android:text="Don't have an account? Sign Up"
-        android:textColor="#808080"
-        android:fontFamily="@font/inter_tight_semibold"
+        android:layout_marginTop="400dp"
+        android:fontFamily="@font/inter_bold"
+        android:padding="5dp"
+        android:text="Back to Log In"
+        android:textColor="#313131"
         android:textSize="16sp"
-        android:clickable="true"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myLinearLayout2"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="20dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
