--- a/app/src/main/res/layout/activity_startup_page.xml
+++ b/app/src/main/res/layout/activity_startup_page.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context=".startup_page"
+    android:fitsSystemWindows="true"
     >
 
     <ImageView
