--- a/app/src/main/res/layout/activity_startup_page.xml
+++ b/app/src/main/res/layout/activity_startup_page.xml
@@ -32,6 +32,7 @@
         android:text="Ever wished you could speak your mind without consequences? &#xA;With Anony-Notes, you can. Share your honest opinions, confessions, and insights anonymously. Let your truths be heard."
         android:textAlignment="center"
         android:textSize="19dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/tvWUsername"
         app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="@+id/tvWUsername"
@@ -52,13 +53,14 @@
         android:id="@+id/tvWelcome"
         android:layout_width="259dp"
         android:layout_height="29dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginTop="96dp"
         android:fontFamily="@font/inter_tight_semibold"
         android:text="Welcome,"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:textSize="25dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <TextView
@@ -69,6 +71,7 @@
         android:layout_marginEnd="24dp"
         android:fontFamily="@font/inter_tight_semibold"
         android:text="Username!"
+        android:textColor="@color/black"
         android:textAlignment="center"
         android:textSize="25dp"
         android:textStyle="bold"
