--- a/app/src/main/res/layout/log_in.xml
+++ b/app/src/main/res/layout/log_in.xml
@@ -118,13 +118,15 @@
             android:layout_marginBottom="15dp"
             app:boxBackgroundMode="outline"
             app:passwordToggleEnabled="true"
+            app:passwordToggleTint="@color/black"
             app:boxStrokeColor="@color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ETPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:textColor="@color/black"/>
             <TextView
                 android:id="@+id/tvForgotPassword"
                 android:layout_width="wrap_content"
