--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -21,19 +21,23 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/home_logo" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/Home_img"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp">
+        app:layout_constraintBottom_toTopOf="@id/Quillpen"
+        app:layout_constraintVertical_bias="0.0">
 
         <!--Dito ilalagay mga post-->
 
 
     </androidx.recyclerview.widget.RecyclerView>
-
 
     <ImageButton
         android:id="@+id/ProfileButton"
