--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -118,7 +118,8 @@
                 android:id="@+id/ETUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="textPersonName" />
+                android:inputType="textPersonName"
+                android:maxLength="50"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
