--- a/app/src/main/res/layout/custom_view.xml
+++ b/app/src/main/res/layout/custom_view.xml
@@ -38,6 +38,7 @@
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="5dp"
                 android:hint="Username"
+                android:textColor="#000000"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
@@ -86,7 +87,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/tvNote" />
 
             <ImageButton
-                android:id="@+id/imageButton"
+                android:id="@+id/commentButton"
                 android:layout_width="27dp"
                 android:layout_height="26dp"
                 android:layout_marginStart="10dp"
@@ -100,10 +101,10 @@
                 android:id="@+id/tvCommentCounter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="12dp"
                 android:text="0"
-                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintStart_toEndOf="@+id/commentButton"
                 app:layout_constraintTop_toBottomOf="@+id/tvNote" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
