--- a/app/src/main/res/layout/custom_view_reply.xml
+++ b/app/src/main/res/layout/custom_view_reply.xml
@@ -22,49 +22,47 @@
 
             <ImageView
                 android:id="@+id/imageViewProfile"
-                android:layout_width="88dp"
-                android:layout_height="86dp"
+                android:layout_width="49dp"
+                android:layout_height="48dp"
                 android:layout_marginStart="4dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.1"
                 app:srcCompat="@drawable/profile" />
 
             <TextView
-                android:id="@+id/tvUsername"
+                android:id="@+id/tvReplyUsername"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="5dp"
                 android:hint="Username"
-                android:textColor="#000000"
-                android:textSize="20sp"
+                android:textSize="15sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/dateCreated"
+                android:id="@+id/replydateCreated"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="7dp"
                 android:hint="00/00/00"
-                android:textSize="16sp"
-                app:layout_constraintStart_toEndOf="@+id/tvUsername"
+                android:textSize="13sp"
+                app:layout_constraintStart_toEndOf="@+id/tvReplyUsername"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvNote"
-                android:layout_width="0dp"
+                android:id="@+id/tvReply"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:layout_marginTop="10dp"
                 android:hint="User's note goes here..."
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="11sp"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
-                app:layout_constraintTop_toBottomOf="@+id/tvUsername" />
+                app:layout_constraintTop_toBottomOf="@+id/tvReplyUsername" />
 
             <ImageButton
                 android:id="@+id/heartButton"
@@ -74,7 +72,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@null"
                 app:layout_constraintStart_toEndOf="@+id/imageViewProfile"
-                app:layout_constraintTop_toBottomOf="@+id/tvNote"
+                app:layout_constraintTop_toBottomOf="@+id/tvReply"
                 app:srcCompat="@drawable/heartbutton" />
 
             <TextView
@@ -85,37 +83,35 @@
                 android:layout_marginTop="12dp"
                 android:text="0"
                 app:layout_constraintStart_toEndOf="@+id/heartButton"
-                app:layout_constraintTop_toBottomOf="@+id/tvNote" />
+                app:layout_constraintTop_toBottomOf="@+id/tvReply" />
 
             <ImageButton
-                android:id="@+id/commentButton"
+                android:id="@+id/imageButton"
                 android:layout_width="27dp"
                 android:layout_height="26dp"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:background="@null"
                 app:layout_constraintStart_toEndOf="@+id/tvHeartCounter"
-                app:layout_constraintTop_toBottomOf="@+id/tvNote"
+                app:layout_constraintTop_toBottomOf="@+id/tvReply"
                 app:srcCompat="@drawable/baseline_comment_24" />
 
             <TextView
                 android:id="@+id/tvCommentCounter"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="3dp"
                 android:layout_marginTop="12dp"
                 android:text="0"
-                app:layout_constraintStart_toEndOf="@+id/commentButton"
-                app:layout_constraintTop_toBottomOf="@+id/tvNote" />
+                app:layout_constraintStart_toEndOf="@+id/imageButton"
+                app:layout_constraintTop_toBottomOf="@+id/tvReply" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
+
     </androidx.cardview.widget.CardView>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/white"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
